--- a/preprocessing_analysis.ipynb
+++ b/preprocessing_analysis.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 581,
+   "execution_count": 594,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 576,
+   "execution_count": 595,
    "metadata": {},
    "outputs": [
     {
@@ -497,8 +497,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/b0/t62rjb510wb79fxb5ch9n3kc0000gn/T/ipykernel_48652/153057462.py:20: RuntimeWarning: Estimated head size (97172.5 mm) exceeded 99th percentile for adult head size\n",
-      "/var/folders/b0/t62rjb510wb79fxb5ch9n3kc0000gn/T/ipykernel_48652/153057462.py:20: RuntimeWarning: (X, Y) fit (80.8, -20852.6) more than 20 mm from head frame origin\n",
+      "/var/folders/b0/t62rjb510wb79fxb5ch9n3kc0000gn/T/ipykernel_48652/2655786679.py:20: RuntimeWarning: Estimated head size (97172.5 mm) exceeded 99th percentile for adult head size\n",
+      "/var/folders/b0/t62rjb510wb79fxb5ch9n3kc0000gn/T/ipykernel_48652/2655786679.py:20: RuntimeWarning: (X, Y) fit (80.8, -20852.6) more than 20 mm from head frame origin\n",
       "ic| 'Apply short channel regression.'\n"
      ]
     },
@@ -556,7 +556,7 @@
      "output_type": "stream",
      "text": [
       "ic| 'Interpolate bad channels.'\n",
-      "/var/folders/b0/t62rjb510wb79fxb5ch9n3kc0000gn/T/ipykernel_48652/153057462.py:20: RuntimeWarning: No bad channels to interpolate. Doing nothing...\n",
+      "/var/folders/b0/t62rjb510wb79fxb5ch9n3kc0000gn/T/ipykernel_48652/2655786679.py:20: RuntimeWarning: No bad channels to interpolate. Doing nothing...\n",
       "ic| 'Apply short channel regression.'\n"
      ]
     },
@@ -590,8 +590,8 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
       "\u001b[0;32m/var/folders/b0/t62rjb510wb79fxb5ch9n3kc0000gn/T/ipykernel_48652/1450640047.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msub\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubjects\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m16\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m18\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# no 17 only\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     raw_haemo, epochs = preprocess_only(\n\u001b[0m\u001b[1;32m      5\u001b[0m         sub, idx)\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/var/folders/b0/t62rjb510wb79fxb5ch9n3kc0000gn/T/ipykernel_48652/153057462.py\u001b[0m in \u001b[0;36mpreprocess_only\u001b[0;34m(bids_path, ID)\u001b[0m\n\u001b[1;32m    171\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    172\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 173\u001b[0;31m     \u001b[0mraw_haemo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreprocess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraw_intensity\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mID\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    174\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    175\u001b[0m     \u001b[0;31m# plot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/var/folders/b0/t62rjb510wb79fxb5ch9n3kc0000gn/T/ipykernel_48652/153057462.py\u001b[0m in \u001b[0;36mpreprocess\u001b[0;34m(raw_intensity, idx, verbose)\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     73\u001b[0m     \u001b[0;31m# baseline correcting (mean)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 74\u001b[0;31m     epochs = mne.Epochs(raw_haemo, events, event_id=event_dict,\n\u001b[0m\u001b[1;32m     75\u001b[0m                         \u001b[0mtmin\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtmin\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtmax\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtmax\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m                         \u001b[0;31m#reject=reject_criteria,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/b0/t62rjb510wb79fxb5ch9n3kc0000gn/T/ipykernel_48652/2655786679.py\u001b[0m in \u001b[0;36mpreprocess_only\u001b[0;34m(bids_path, ID)\u001b[0m\n\u001b[1;32m    172\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    173\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 174\u001b[0;31m     \u001b[0mraw_haemo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreprocess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraw_intensity\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mID\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    175\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    176\u001b[0m     \u001b[0;31m# plot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/b0/t62rjb510wb79fxb5ch9n3kc0000gn/T/ipykernel_48652/2655786679.py\u001b[0m in \u001b[0;36mpreprocess\u001b[0;34m(raw_intensity, idx, verbose)\u001b[0m\n\u001b[1;32m     73\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m     \u001b[0;31m# baseline correcting (mean)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 75\u001b[0;31m     epochs = mne.Epochs(raw_haemo, events, event_id=event_dict,\n\u001b[0m\u001b[1;32m     76\u001b[0m                         \u001b[0mtmin\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtmin\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtmax\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtmax\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m                         \u001b[0;31m#reject=reject_criteria,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m<decorator-gen-243>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, raw, events, event_id, tmin, tmax, baseline, picks, preload, reject, flat, proj, decim, reject_tmin, reject_tmax, detrend, on_missing, reject_by_annotation, metadata, event_repeated, verbose)\u001b[0m\n",
       "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/mne/epochs.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, raw, events, event_id, tmin, tmax, baseline, picks, preload, reject, flat, proj, decim, reject_tmin, reject_tmax, detrend, on_missing, reject_by_annotation, metadata, event_repeated, verbose)\u001b[0m\n\u001b[1;32m   2600\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreject_by_annotation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreject_by_annotation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2601\u001b[0m         \u001b[0;31m# call BaseEpochs constructor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2602\u001b[0;31m         super(Epochs, self).__init__(\n\u001b[0m\u001b[1;32m   2603\u001b[0m             \u001b[0minfo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mevents\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mevent_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtmin\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtmax\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmetadata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmetadata\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2604\u001b[0m             \u001b[0mbaseline\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbaseline\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mraw\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mraw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpicks\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpicks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreject\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mreject\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m<decorator-gen-231>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, info, data, events, event_id, tmin, tmax, baseline, raw, picks, reject, flat, decim, reject_tmin, reject_tmax, detrend, proj, on_missing, preload_at_end, selection, drop_log, filename, metadata, event_repeated, verbose)\u001b[0m\n",
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 582,
+   "execution_count": 593,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1041,7 @@
     "    sub17[tempi2[0],:]\n",
     "\n",
     "    #delete the bad trial\n",
-    "    sub17_clean = np.delete(sub17, tempi2[0], 0) # uden +1\n",
+    "    sub17_clean = np.delete(sub17, tempi2[0]+1, 0) #\n",
     "\n",
     "    #check that it's gone\n",
     "    ic(\"Checking that it's gone\")\n",
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 584,
+   "execution_count": 590,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1084,7 @@
       " [5158    0    9]\n",
       " [5223    0    1]\n",
       " [5231    0   32]\n",
-      " [5250    0    2]\n",
+      " [5250    0   24]\n",
       " [5261    0   38]\n",
       " [5270    0    1]\n",
       " [5285    0   30]\n",
@@ -1105,7 +1105,7 @@
        "(384, 3)"
       ]
      },
-     "execution_count": 584,
+     "execution_count": 590,
      "metadata": {},
      "output_type": "execute_result"
     }
